--- a/lib/farmers_market_cal/views/index.erb
+++ b/lib/farmers_market_cal/views/index.erb
@@ -28,6 +28,8 @@
     <a href="<%= ics_url.sub(/^http/, 'webcal') %>">Subscribe iCalendar</a>
   <% end %>
 
+  <a href="https://github.com/justinlove/farmers_market_cal"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
+
   <script>
     if (navigator.geolocation) {
       navigator.geolocation.getCurrentPosition(function(position) {
