--- a/lib/farmers_market_cal/views/index.erb
+++ b/lib/farmers_market_cal/views/index.erb
@@ -5,6 +5,9 @@
 <body>
   <h1>Farmers Market iCalendar</h1>
 
+  <p>Create an iCalendar feed from the <a href="http://search.ams.usda.gov/farmersmarkets/">USDA Farmers Market directory</a></p>
+
+  <p>This product uses USDA’s National Farmers Market API but is not endorsed or certified by USDA.</p>
   <form>
     <p>
       <label for="ll">Latitude, Longitude<label>
@@ -27,6 +30,7 @@
     <a href="<%= ics_url %>">Download iCalendar</a>
     <a href="<%= ics_url.sub(/^http/, 'webcal') %>">Subscribe iCalendar</a>
   <% end %>
+
 
   <a href="https://github.com/justinlove/farmers_market_cal"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 
