--- a/lib/farmers_market_cal/views/index.erb
+++ b/lib/farmers_market_cal/views/index.erb
@@ -5,7 +5,7 @@
 <body>
   <h1>Farmers Market iCalendar</h1>
 
-  <p>Create an iCalendar feed from the <a href="http://search.ams.usda.gov/farmersmarkets/">USDA Farmers Market directory</a></p>
+  <p>Create an iCalendar feed from the <a href="https://search.ams.usda.gov/farmersmarkets/">USDA Farmers Market directory</a></p>
 
   <p>This product uses USDA’s National Farmers Market API but is not endorsed or certified by USDA.</p>
   <form>
@@ -28,7 +28,7 @@
 
   <% if zip || ll %>
     <a href="<%= ics_url %>">Download iCalendar</a>
-    <a href="<%= ics_url.sub(/^http/, 'webcal') %>">Subscribe iCalendar</a>
+    <a href="<%= ics_url.sub(/^https?/, 'webcal') %>">Subscribe iCalendar</a>
   <% end %>
 
 
